<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshBooks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now_reading"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/seeAllNowReading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/see_all"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nowReadingRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="280dp"
                    tools:listitem="@layout/book_item"
                    tools:itemCount="1"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                <LinearLayout
                    android:id="@+id/noItemsNowReading"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:weightSum="4"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ImageView
                        android:layout_weight="3"
                        android:src="@drawable/ic_books"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_items_found"/>
                </LinearLayout>
            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newly_added"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/seeAllNewlyAdded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/see_all"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/newlyAddedRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="280dp"
                    tools:listitem="@layout/book_item"
                    tools:itemCount="1"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                <LinearLayout
                    android:id="@+id/noItemsNewlyAdded"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:weightSum="4"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ImageView
                        android:layout_weight="3"
                        android:src="@drawable/ic_books"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_items_found"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:indeterminate="true"
        android:layout_height="wrap_content"
        app:showAnimationBehavior="inward"
        android:indeterminateBehavior="cycle"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>