<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bookImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_outline"
        android:maxWidth="170dp"
        android:minWidth="100dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        tools:src="@drawable/ic_no_image" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:minWidth="60dp"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bookAuthor"
        app:layout_constraintEnd_toEndOf="@+id/bookImage"
        app:layout_constraintStart_toStartOf="@+id/bookImage"
        app:layout_constraintTop_toBottomOf="@+id/bookImage"
        app:layout_constraintVertical_bias="0.24000001"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Games People Play" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="6dp"
        android:alpha="0.7"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bookGenreLayout"
        app:layout_constraintEnd_toEndOf="@+id/bookTitle"
        app:layout_constraintStart_toStartOf="@+id/bookTitle"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Hey hey hey hey hey" />

    <LinearLayout
        android:id="@+id/bookGenreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/bookDateLayout"
        app:layout_constraintEnd_toEndOf="@+id/bookAuthor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bookAuthor"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor"
        app:layout_constraintVertical_chainStyle="packed">


        <TextView
            android:id="@+id/tvBookGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:alpha="0.7"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/genre_tv"
            android:textAppearance="?attr/textAppearanceListItemSecondary" />

        <TextView
            android:id="@+id/bookGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:textStyle="bold"
            tools:text="Hey hey hey hey hey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bookDateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/rentBookBtn"
        app:layout_constraintEnd_toEndOf="@+id/bookGenreLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bookGenreLayout"
        app:layout_constraintTop_toBottomOf="@+id/bookGenreLayout"
        app:layout_constraintVertical_chainStyle="packed">


        <TextView
            android:id="@+id/tvBookDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:alpha="0.7"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/published_tv"
            android:textAppearance="?attr/textAppearanceListItemSecondary" />

        <TextView
            android:id="@+id/bookDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:textStyle="bold"
            tools:text="Hey hey hey hey hey" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/rentBookBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/rent_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>